
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct string_list {int nr; TYPE_1__* items; } ;
struct patch_util {int matching; int diffsize; int diff; } ;
struct TYPE_2__ {struct patch_util* util; } ;


 int ALLOC_ARRAY (int*,int) ;
 int COST_MAX ;
 int compute_assignment (int,int,int*,int*,int*) ;
 int diffsize (int ,int ) ;
 int free (int*) ;
 int st_mult (int,int) ;

__attribute__((used)) static void get_correspondences(struct string_list *a, struct string_list *b,
    int creation_factor)
{
 int n = a->nr + b->nr;
 int *cost, c, *a2b, *b2a;
 int i, j;

 ALLOC_ARRAY(cost, st_mult(n, n));
 ALLOC_ARRAY(a2b, n);
 ALLOC_ARRAY(b2a, n);

 for (i = 0; i < a->nr; i++) {
  struct patch_util *a_util = a->items[i].util;

  for (j = 0; j < b->nr; j++) {
   struct patch_util *b_util = b->items[j].util;

   if (a_util->matching == j)
    c = 0;
   else if (a_util->matching < 0 && b_util->matching < 0)
    c = diffsize(a_util->diff, b_util->diff);
   else
    c = COST_MAX;
   cost[i + n * j] = c;
  }

  c = a_util->matching < 0 ?
   a_util->diffsize * creation_factor / 100 : COST_MAX;
  for (j = b->nr; j < n; j++)
   cost[i + n * j] = c;
 }

 for (j = 0; j < b->nr; j++) {
  struct patch_util *util = b->items[j].util;

  c = util->matching < 0 ?
   util->diffsize * creation_factor / 100 : COST_MAX;
  for (i = a->nr; i < n; i++)
   cost[i + n * j] = c;
 }

 for (i = a->nr; i < n; i++)
  for (j = b->nr; j < n; j++)
   cost[i + n * j] = 0;

 compute_assignment(n, n, cost, a2b, b2a);

 for (i = 0; i < a->nr; i++)
  if (a2b[i] >= 0 && a2b[i] < b->nr) {
   struct patch_util *a_util = a->items[i].util;
   struct patch_util *b_util = b->items[a2b[i]].util;

   a_util->matching = a2b[i];
   b_util->matching = i;
  }

 free(cost);
 free(a2b);
 free(b2a);
}
